--- a/client/src/App.css
+++ b/client/src/App.css
@@ -15,8 +15,41 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  padding-left: 30px;
 }
 
 .App-link {
   color: #09d3ac;
+}
+
+.App-header ul {
+  list-style-type: none;
+  flex: 1;
+  text-align: right;
+  padding-right: 30px;
+
+}
+
+.App-header ul li {
+  display: inline;
+  text-align: center;
+  padding: 10px;
+
+}
+
+.App-header ul li a {
+  font-size: calc(5px + 2vmin);
+  color: #ffffff;
+  text-decoration: none;
+
+}
+
+.App-link {
+  color: #09d3ac;
+
+}
+
+main {
+  margin: 30px auto;
+
 }
