--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,25 +1,14 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 10vh;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   font-size: calc(10px + 2vmin);
   color: white;
   padding-left: 30px;
-}
 
-.App-link {
-  color: #09d3ac;
 }
 
 .App-header ul {
@@ -33,13 +22,13 @@
 .App-header ul li {
   display: inline;
   text-align: center;
-  padding: 10px;
+  padding-right: 10px;
 
 }
 
 .App-header ul li a {
   font-size: calc(5px + 2vmin);
-  color: #ffffff;
+  color: #fff;
   text-decoration: none;
 
 }
@@ -49,7 +38,7 @@
 
 }
 
-main {
+main{
   margin: 30px auto;
 
 }
